# iot-cpp-sdk

./: .travis.yml  CMakeLists.txt  README.md
docs/: README.md
docs/html/: annotated.html  annotated_dup.js  appd__iot__def_8h.html  appd__iot__def_8h.js  appd__iot__def_8h_source.html  appd__iot__interface_8h.html  appd__iot__interface_8h.js  appd__iot__interface_8h_source.html  beacon_8cpp.html  beacon_8cpp.js  beacon_8hpp.html  beacon_8hpp.js  beacon_8hpp_source.html  classes.html  config_8cpp.html  config_8cpp.js  config_8hpp.html  config_8hpp.js  config_8hpp_source.html  custom__event_8cpp.html  custom__event_8cpp.js  custom__event_8hpp.html  custom__event_8hpp.js  custom__event_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  error__event_8cpp.html  error__event_8cpp.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  (+64 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  (+23 more)
sample/: CMakeLists.txt  README.md
sample/src/: custom_event.cpp  custom_event.hpp  error_event.cpp  error_event.hpp  http_curl_interface.cpp  http_curl_interface.hpp  log.cpp  log.hpp  main.cpp  network_event.cpp  network_event.hpp  options.cpp  options.hpp
sdk/: CMakeLists.txt
sdk/include/: appd_iot_def.h  appd_iot_interface.h
sdk/src/: beacon.cpp  beacon.hpp  config.cpp  config.hpp  custom_event.cpp  custom_event.hpp  error_event.cpp  json_serializer.cpp  json_serializer.hpp  log.cpp  log.hpp  network_event.cpp  utils.cpp  utils.hpp
tests/: CMakeLists-cgreen.txt.in  CMakeLists.txt  README.md
tests/src/: app_mock_interface.cpp  app_mock_interface.hpp  common_test.hpp  config_test.cpp  custom_event_test.cpp  error_event_test.cpp  http_interface_test.cpp  http_mock_interface.cpp  http_mock_interface.hpp  json_serializer_test.cpp  log_interface_test.cpp  log_mock_interface.cpp  log_mock_interface.hpp  main.cpp  network_event_test.cpp  utils_test.cpp
